Main-Stuff/Test/my-website/ingress-file.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-website-ingress-host-based
spec:
  rules:
    - host: my-ingress-ecommerce.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-website-service
                port:
                  number: 80
