Main-Stuff/Test/my-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-website-service
spec:
  selector:
    app: nginx-website
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
